# auth-fruitshop-bff

./: README.md  docker-compose.yml
authserver/: Dockerfile
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
db/: Dockerfile  init.sql  supervisord.conf
frontend/: app.js  index.html  seq.html  style.css
frontend/shop/: app.js
